# cargo-clean-global

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  cleanup.rs  cli.rs  config.rs  discovery.rs  main.rs  manifest.rs  paths.rs  types.rs
