[package]
name = "cargo-clean-global"
version = "0.1.0"
edition = "2021"
description = "A safe Cargo plugin that cleans target directories across local Cargo projects."
license = "MIT"
repository = "https://github.com/clovu/cargo-clean-global"
keywords = ["cargo", "clean", "target", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [
  "/.DS_Store",
  "/.editorconfig",
  "/.github/",
  "/.gitignore",
  "/.vscode/",
  "/target/",
]

[[bin]]
name = "cargo-clean-global"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs-next = "2.0.0"
indicatif = "0.17"
toml = "0.8"
