[package]
authors = ["Clover You <hi@clovu.me>"]
categories = ["development-tools::cargo-plugins"]
description = "A safe Cargo plugin that cleans target directories across local Cargo projects."
edition = "2024"
exclude = [
  "/.DS_Store",
  "/.editorconfig",
  "/.github/",
  "/.gitignore",
  "/.vscode/",
  "/target/",
]
keywords = ["cargo", "clean", "target", "cli"]
license-file = "./LICENSE"
name = "cargo-clean-global"
readme = "README.md"
repository = "https://github.com/clovu/cargo-clean-global"
version = "1.1.0"

[[bin]]
name = "cargo-clean-global"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.16.3"
dirs-next = "2.0.0"
indicatif = "0.17"
toml = "0.8"
